[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
log = "0.4.26"
dotenvy = "0.15.7"

lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
#lettre_email = "0.9"
rocket = { version = "0.5.1", features = ["json"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }